--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
         "chart.js": "2.9.4",
         "file-saver": "^2.0.5",
         "font-awesome": "^4.7.0",
-        "html2canvas": "^1.0.0",
+        "html2canvas": "^1.1.4",
         "jspdf": "^1.5.3",
         "moment": "^2.29.1",
         "ngx-spinner": "^10.0.1",
         "primeflex": "2.0.0",
         "primeicons": "4.1.0",
-        "primeng": "^11.4.0",
-        "prismjs": "^1.23.0",
+        "primeng": "^11.4.4",
+        "prismjs": "^1.24.1",
         "quill": "^1.3.7",
         "rxjs": "~6.6.0",
         "sweetalert2": "^10.16.6",
@@ -49,10 +49,10 @@
         "@angular/cli": "~11.2.2",
         "@angular/compiler-cli": "~11.2.3",
         "@types/html2canvas": "^1.0.0",
-        "@types/jasmine": "^3.6.6",
-        "@types/jasminewd2": "~2.0.8",
+        "@types/jasmine": "^3.8.1",
+        "@types/jasminewd2": "^2.0.10",
         "@types/jspdf": "^2.0.0",
-        "@types/node": "^12.20.5",
+        "@types/node": "^12.20.16",
         "codelyzer": "^6.0.0",
         "jasmine-core": "~3.6.0",
         "jasmine-spec-reporter": "~5.0.0",
@@ -60,7 +60,7 @@
         "karma-chrome-launcher": "~3.1.0",
         "karma-coverage-istanbul-reporter": "~3.0.3",
         "karma-jasmine": "~4.0.0",
-        "karma-jasmine-html-reporter": "^1.5.0",
+        "karma-jasmine-html-reporter": "^1.7.0",
         "protractor": "~7.0.0",
         "ts-node": "~8.3.0",
         "tslint": "~6.1.0",
