--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "private": true,
     "dependencies": {
         "@angular/animations": "~11.2.3",
-        "@angular/cdk": "~11.2.3",
+        "@angular/cdk": "^11.2.13",
         "@angular/common": "~11.2.3",
         "@angular/compiler": "~11.2.3",
         "@angular/core": "~11.2.3",
@@ -28,16 +28,19 @@
         "@ngx-translate/http-loader": "^6.0.0",
         "chart.js": "2.9.4",
         "file-saver": "^2.0.5",
+        "font-awesome": "^4.7.0",
+        "html2canvas": "^1.2.2",
+        "jspdf": "^1.5.3",
         "moment": "^2.29.1",
         "ngx-spinner": "^10.0.1",
         "primeflex": "2.0.0",
         "primeicons": "4.1.0",
-        "primeng": "11.4.0",
-        "prismjs": "^1.23.0",
+        "primeng": "^11.4.5",
+        "prismjs": "^1.24.1",
         "quill": "^1.3.7",
         "rxjs": "~6.6.0",
         "sweetalert2": "^10.16.6",
-        "tslib": "^2.0.0",
+        "tslib": "^2.3.1",
         "web-animations-js": "^2.3.2",
         "zone.js": "~0.10.2"
     },
@@ -45,9 +48,11 @@
         "@angular-devkit/build-angular": "~0.1102.2",
         "@angular/cli": "~11.2.2",
         "@angular/compiler-cli": "~11.2.3",
-        "@types/jasmine": "^3.6.6",
-        "@types/jasminewd2": "~2.0.8",
-        "@types/node": "^12.20.5",
+        "@types/html2canvas": "^1.0.0",
+        "@types/jasmine": "^3.8.2",
+        "@types/jasminewd2": "^2.0.10",
+        "@types/jspdf": "^2.0.0",
+        "@types/node": "^12.20.19",
         "codelyzer": "^6.0.0",
         "jasmine-core": "~3.6.0",
         "jasmine-spec-reporter": "~5.0.0",
@@ -55,7 +60,7 @@
         "karma-chrome-launcher": "~3.1.0",
         "karma-coverage-istanbul-reporter": "~3.0.3",
         "karma-jasmine": "~4.0.0",
-        "karma-jasmine-html-reporter": "^1.5.0",
+        "karma-jasmine-html-reporter": "^1.7.0",
         "protractor": "~7.0.0",
         "ts-node": "~8.3.0",
         "tslint": "~6.1.0",
