--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 {
     "compileOnSave": false,
     "compilerOptions": {
+        "allowSyntheticDefaultImports": true,
         "baseUrl": "./",
         "outDir": "./dist/out-tsc",
         "sourceMap": true,
@@ -12,6 +13,9 @@
         "importHelpers": true,
         "target": "es2015",
         "module": "es2020",
+        "resolveJsonModule": true,
+
+        
         "lib": [
             "es2018",
             "dom"
